platform/apps/cluster-apiserver/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.2-standalone-strict/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-apiserver
