platform/apps/cluster-apiserver/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kube-apiserver-gw
  namespace: kube-api-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: tls-kube-apiserver
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - cluster-apiserver.ayame.asnk.io
