platform/apps/cluster-apiserver/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cluster-apiserver-dr
  namespace: cluster-apiserver
spec:
  host: cluster-apiserver.internal
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
